# monty

./: .gitignore  Cargo.toml  LICENSE  README.md  magic.py  monty.py  pyproject.toml  zigcc
.github/: FUNDING.yml  labeler.yml
.github/workflows/: check.yml  label.yml  python-package.yml  test.yml
cranelift-structbuf/: Cargo.toml
cranelift-structbuf/src/: lib.rs
docs/book/: book.toml
examples/: bottle.py  classes.py  control_flow.py  extern_puts.py  hello_world.py  iter_fib.py  var.py
libstd/: __monty.py  builtins.py  example.py
libstd/__monty/: __init__.py
libstd/importlib/: _bootstrap.py
monty/: __init__.py  __main__.py  comptime.py  context.py  diagnostic.py  driver.py  errors.py  item.py  mirgen.py  pipeline.py  types.py  unit.py  utils.py  visitors.py
monty/ast/: __init__.py  native.py  typed.py
monty/ir/: __init__.py  block.py  function.py  module.py  (+2 more)
montyc/: Cargo.toml
montyc/src/: class.rs  codegen.rs  context.rs  database.rs  def_stack.rs  env.rs  error.rs  fmt.rs  func.rs  global.rs  global_context.rs  import.rs  layout.rs  lib.rs  lowering.rs  magical_names.py  main.rs  opts.rs  phantom.rs  ribs.rs  scope.rs  ssamap.rs  type_eval.rs  typechk.rs  typing.rs  value_context.rs
montyc/src/ast/: assign.rs  atom.rs  class.rs  expr.rs  funcdef.rs  ifelif.rs  import.rs  mod.rs  module.rs  primary.rs  retrn.rs  stmt.rs  while_.rs
montyc/src/codegen/: context.rs  layout.rs  lower_ast.rs  mod.rs  module.rs  pointer.rs  storage.rs  structbuf.rs  tvalue.rs
montyc/src/context/: codegen.rs  global.rs  local.rs  mod.rs  module.rs  resolver.rs
montyc/src/global/: context.rs  mod.rs  value_context.rs  value_store.rs
montyc/src/hliri/: mod.rs
montyc/src/interpreter/: eval.rs  mod.rs  object.rs  runtime.rs  scope.rs
montyc/src/lower/: mod.rs
montyc/src/parser/: ast.rs  comb.rs  mod.rs  span_ref.rs  token.rs  token_iter.rs
montyc/src/parser/comb/: assign.rs  atom.rs  block.rs  class.rs  core.rs  expr.rs  funcdef.rs  ifelse.rs  import.rs  mod.rs  primary.rs  stmt.rs  test.rs  while_.rs
montyc/src/scope/: local.rs  mod.rs  object.rs  opaque.rs  renamed.rs  search.rs  wrapped.rs
montyc/src/typechk/: mod.rs  tyeval.rs
montyc_ast/: Cargo.toml
montyc_codegen/: Cargo.toml
montyc_codegen/src/: lib.rs  lower.rs  module.rs  pointer.rs  structbuf.rs  tvalue.rs
montyc_codegen/src/builtins/: bool.rs  int.rs  mod.rs
montyc_codegen/src/cranelift/: builder.rs  data.rs  mod.rs
montyc_codegen/src/cranelift/builtins/: bool.rs  int.rs  mod.rs
montyc_core/: Cargo.toml
montyc_core_types/: Cargo.toml
montyc_driver/: Cargo.toml
montyc_driver/src/: cfg_reducer.rs  import.rs  lib.rs  pretty_printer.rs  session_request.rs  typeck.rs  value_store.rs
montyc_driver/src/_value/: mod.rs  value_context.rs
montyc_driver/src/global_context/: host.rs  mod.rs  query.rs
montyc_driver/src/session_context/: mod.rs  query.rs
montyc_driver/src/typeck/: block_cfg.rs  cfg_reducer.rs  mod.rs  typing_machine.rs  variable_flowgraph.rs
montyc_flatcode/: Cargo.toml
montyc_hlir/: Cargo.toml
montyc_hlir/src/: code.rs  flatcode.rs  func.rs  glue.rs  grapher.rs  lib.rs  module_object.rs  object_graph.rs  value_store.rs
montyc_hlir/src/flatcode/: lower.rs  mod.rs  raw_inst.rs
montyc_hlir/src/interpreter/: exception.rs  mod.rs  runtime.rs
montyc_hlir/src/interpreter/_runtime/: eval.rs
montyc_hlir/src/interpreter/object/: alloc.rs  class.rs  dict.rs  frame.rs  func.rs  int.rs  mod.rs  objref.rs  raw.rs  string.rs
montyc_hlir/src/interpreter/runtime/: ceval.rs  eval.rs  mod.rs  object_graph.rs  scope_graph.rs
montyc_hlir/src/typing/: mod.rs
montyc_hlirt/: Cargo.toml
montyc_hlirt/src/: argparse.rs  exception.rs  lib.rs  storage.rs
montyc_hlirt/src/argparse/: argspec.rs  argument.rs  generic.rs  mod.rs  then.rs
montyc_hlirt/src/eval/: frame.rs  inst_exec.rs  mod.rs
montyc_hlirt/src/eval/ctx/: calling_context.rs  eval_glue.rs  evaluator.rs  mod.rs
montyc_hlirt/src/import/: bootstrap.rs  mod.rs
montyc_hlirt/src/object/: builders.rs  iter.rs  mod.rs  pyobject.rs  raw_object.rs  shared_object.rs  value.rs
montyc_hlirt/src/rt/: mod.rs  singletons.rs  tests.rs
montyc_hlist/: Cargo.toml
montyc_interpreter/: Cargo.toml
montyc_lexer/: Cargo.toml
montyc_parser/: Cargo.toml
montyc_parser/src/: ast.rs  comb.rs  lib.rs  main.rs  span_interner.rs  spanned.rs  token.rs  token_iter.rs  token_stream_iter.rs
montyc_parser/src/ast/: atom.rs  expr.rs  funcdef.rs  ifstmt.rs  import.rs  mod.rs  models.rs  primary.rs  statement.rs
montyc_parser/src/comb/: assign.rs  atom.rs  class.rs  core.rs  expr.rs  funcdef.rs  ifelse.rs  import.rs  mod.rs  primary.rs  stmt.rs  test.rs  while_.rs
montyc_parser/tests/: regression_testing.rs
montyc_parser/tests/expr_await/: expected.json  input.py
montyc_parser/tests/expr_integer/: expected.json
montyc_parser/tests/hex_literal/: expected.json  input.py
montyc_parser/tests/statement_classdef/: expected.json
montyc_parser/tests/statement_classdef_generic/: expected.json  input.py
montyc_parser/tests/statement_funcdef/: expected.json  input.py
montyc_parser/tests/statement_funcdef_generic/: input.py
montyc_parser2/: Cargo.toml
montyc_parser2/src/: comb.rs  lib.rs  span_interner.rs  token.rs  token_iter.rs  token_stream_iter.rs
montyc_parser2/src/ast/: mod.rs  spanned.rs
montyc_parser2/src/ast/models/: annotation.rs  assign.rs  atom.rs  classdef.rs  expr.rs  funcdef.rs  ifstmt.rs  import.rs  mod.rs  module.rs  primary.rs  return_.rs  statement.rs  string_ref.rs  while_.rs
montyc_parser2/src/parser/: comb.rs  mod.rs
montyc_parser2/tests/statement_classdef/: input.py
montyc_pyproject/: Cargo.toml
montyc_query/: Cargo.toml
montyc_query/_/src/: lib.rs
montyc_query/_/src/actor/: mod.rs  seeds.rs
montyc_query/src/: and_then.rs  any.rs  lib.rs  query.rs  storage.rs
montyc_query/tests/: async_example.rs
montyc_test_suite/: Cargo.toml
montyc_typing/: Cargo.toml
montyc_vfs/: Cargo.toml
std/: builtins.py
tests/: test_import.py  test_sanity.py  test_simple_types.py  test_various.py
(+93 files in other folders)
