[workspace]
members = [
    # "montyc",
    "montyc_ast/",
    "montyc_parser/",
    "montyc_lexer/",
    "montyc_core_types/",
    # "montyc_hlirt",
    # "montyc_codegen",
    "montyc_query/",
    "montyc_hlist/",
    "montyc_test_suite/",
    # "montyc_flatcode",
    # "montyc_hlirt",
]

keyword = ["compilers", "typecheckers", "monty", "python"]

# exclude = ["cranelift-structbuf"]

[profile.dev]
codegen-units = 16
lto = "off"
incremental = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
debug-assertions = false
debug = 0
