[tool.poetry]
name = "monty"
version = "0.1.0"
description = "The elegant Python compiler"
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
rope = "^0.17.0"
pylint = "<2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
