[tool.poetry]
name = "monty"
version = "0.0.0"
description = "A Strongly Typed Python Dialect"
authors = ["mental <mentalfoss@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
rope = "^0.17.0"
pylint = "<2.0.0"
sphinx = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
