[package]
name = "montyc"
version = "0.99.0"
authors = ["mental <mentalfoss@gmail.com>"]
edition = "2018"
description = "A Strongly Typed, Flexible, and Compiled Python Dialect"
documentation = "https://docs.rs/montyc"
readme = "README.md"
repository = "https://github.com/mental32/monty"
license = "MIT"
keywords = ["compilers", "typecheckers", "monty", "python"]

[dependencies]
montyc_driver = { path = "../montyc_driver" }
montyc_codegen = { path = "../montyc_codegen" }
montyc_query = { path = "../montyc_query" }
montyc_core = { path = "../montyc_core" }

structopt = "0.3.21"
anyhow = "1.0.52"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "default", "time"] }
clap = { version = "4", features = ["derive"] }