[package]
name = "montyc_codegen"
version = "0.99.0"
authors = ["mental <mentalfoss@gmail.com>"]
edition = "2018"

[dependencies]
montyc_core = { path = "../montyc_core" }
montyc_hlir = { path = "../montyc_hlir" }

# "make my life easier" dependencies
petgraph = "0.6"

# Logging dependencies
log = "0.4.14"
env_logger = "0.9"

# codegen dependencies
cranelift-codegen = "0.76.0"
cranelift-frontend = "0.76.0"
cranelift-object = "0.76.0"
cranelift-module = "0.76.0"
target-lexicon = "0.12.0"
ahash = { version = "0.7.4", features = ["std"] }
tempfile = "3.2"
