[package]
name = "montyc_codegen"
version = "0.99.0"
authors = ["mental <mentalfoss@gmail.com>"]
edition = "2018"

[dependencies]
montyc_core = { path = "../montyc_core" }
montyc_flatcode = { path = "../montyc_flatcode" }
montyc_query = { path = "../montyc_query" }
montyc_parser = { path = "../montyc_parser" }


# "make my life easier" dependencies
petgraph = "0.6"

# Logging dependencies
tracing = "0.1.37"
env_logger = "0.9"

# codegen dependencies
target-lexicon = "0.12.0"
tempfile = "3.2"
ahash = { version = "0.7.4", features = ["std"] }

cranelift-frontend = { version = "0.85.0", optional = true }
cranelift-codegen = { version = "0.85.0", optional = true }
cranelift-object = { version = "0.85.0", optional = true }
cranelift-module = { version = "0.85.0", optional = true }

gccjit = { git = "https://github.com/antoyo/gccjit.rs", optional = true }

llvm-sys = { version = "130.0.0", optional = true }

[features]
default = ["cranelift"]

cranelift = [
    "cranelift-frontend",
    "cranelift-codegen",
    "cranelift-object",
    "cranelift-module",
]

llvm = ["llvm-sys"]

gcc = ["gccjit"]
