[package]
name = "montyc_hlir"
version = "0.99.0"
edition = "2018"

[dependencies]
montyc_core = { path = "../montyc_core" }
montyc_parser = { path = "../montyc_parser" }

ahash = "0.7.4"
log = "0.4"
petgraph = "0.6"
derive_more = "0.99"

# for specifying linkage and callcov in ObjectLayout
cranelift-module = "0.76.0"
cranelift-codegen = "0.76.0"
