[package]
name = "montyc_parser"
version = "0.99.0"
edition = "2018"

[dependencies]
montyc_core = { path = "../montyc_core" }
montyc_ast = { path = "../montyc_ast" }
montyc_lexer = { path = "../montyc_lexer" }

logos = "0.12"
nom = "6"
tracing = "0.1.37"
ahash = { version = "0.7", features = ["std"] }
derive_more = "0.99"
